<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Program Code</string>
    <string name="text_privacy_policy_drawer">PRIVACY POLICY</string>
    <string name="text_desc_privacy_policy_drawer">Privacy Policy</string>
    <string name="text_more_apps_drawer">MORE APPS</string>
    <string name="text_desc_more_apps_drawer">More Apps</string>
    <string name="text_rate_this_app_drawer">RATE THIS APP</string>
    <string name="text_desc_rate_app_drawer">Rate App</string>
    <string name="text_history_drawer">HISTORY</string>
    <string name="text_desc_history_drawer">History</string>
    <string name="text_favorite_drawer">FAVORITE</string>
    <string name="text_desc_favorite_drawer">Favorite</string>
    <string name="text_home_drawer">HOME</string>
    <string name="text_desc_home_drawer">Home</string>
    <string name="text_send_feedback_drawer">SEND FEEDBACK</string>
    <string name="text_desc_send_feedback_drawer">Send Feedback</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="current_code_generated">%1$s</string>
    <string name="text_no_favorite">There\'s no favorite code right now!</string>
    <string name="text_submit_code">SUBMIT CODE</string>
    <string name="text_desc_share_app">Share this App</string>
    <string name="text_share_app_drawer">SHARE APP</string>
    <string name="text_no_internet_connection">No internet connection</string>
    <string name="text_please_check_your_internet_connection_and_tap_on_button_below">Please check your internet connection and tap on button below.</string>
</resources>
